--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </header>
     <div id="top-paragraph">
         <p id="description">
-            Help us to get you know more. Please fill the form.
+            Help us to know you better. Please fill the form.
         </p>
     </div>
     <main class="main">
